@@ -1,3 +1,7 @@
+awesant (0.4) released at 2012-11-15
+
+    * Implemented a extended add_field feature.
+
 awesant (0.3) released at 2012-11-14
 
     * Fixed timestamp formatting.
